refactor: remove timber lib

--- a/web/app/themes/brocooly/resources/views/content/front-page.twig
+++ b/web/app/themes/brocooly/resources/views/content/front-page.twig
@@ -1,6 +1,5 @@
 {% extends 'layouts/app.twig' %}
 
 {% block content %}
-	<h1>{{ __( 'Hello World', 'brocooly' ) }}</h1>
-
+	<h1>Hello World</h1>
 {% endblock %}
