refactor: query builders

--- a/web/app/themes/brocooly/style.css
+++ b/web/app/themes/brocooly/style.css
@@ -4,11 +4,11 @@
 Theme Name: Brocooly
 Theme URI: https://czernika.github.io/brocooly/
 Author: Aliakseyenka Ihar <aliha.devs@gmail.com>
-Description: WordPress starter boilerplate with an improved folder structure, twig template engine and webpack for compiling assets. Developer friendly
+Description: Developer-friendly framework heavily inspired by Laravel and based on Timber and Wpemerge solutions for WordPress themes development with Bedrock folder structure
 Requires at least: 5.5
-Tested up to: 5.8.2
+Tested up to: 5.8.3
 Requires PHP: 8.0
-Version: 1.1.0
+Version: 1.1.1
 License: MIT
 Text Domain: brocooly
 */
