feat: mix and tailwindcss

--- a/web/app/themes/brocooly/resources/sass/app.scss
+++ b/web/app/themes/brocooly/resources/sass/app.scss
@@ -1,3 +1,15 @@
-body {
-	font-family: sans-serif;
-}
+/**
+ * --------------------------------------------------------------------------
+ * Tailwindcss
+ * --------------------------------------------------------------------------
+ */
+@import '@sass/libs/tailwindcss/base';
+@import '@sass/libs/tailwindcss/components';
+@import '@sass/libs/tailwindcss/utilities';
+
+/**
+ * --------------------------------------------------------------------------
+ * a11y
+ * --------------------------------------------------------------------------
+ */
+@import '@sass/vendor/a11y';
