feat: extend twig and assets loader

--- a/web/app/themes/brocooly/resources/views/content/front-page.twig
+++ b/web/app/themes/brocooly/resources/views/content/front-page.twig
@@ -1,6 +1,9 @@
 {% extends 'layouts/app.twig' %}
 
+{% block body_class %} h-screen {% endblock %}
+
 {% block content %}
-	<h1>{{ __( 'Hello World', 'brocooly' ) }}</h1>
+
+	{% include 'example.twig' %}
 
 {% endblock %}
