chore: core rebuild

--- a/web/app/themes/brocooly/resources/views/layouts/app.twig
+++ b/web/app/themes/brocooly/resources/views/layouts/app.twig
@@ -44,7 +44,7 @@
 	<main
 		id="content"
 		role="main"
-		class="h-full site-main"
+		class="site-main"
 		tabindex="-1"
 	>
 		{% block content %}{% endblock %}
