chore: change assets structure

--- a/web/app/themes/brocooly/resources/views/layouts/app.twig
+++ b/web/app/themes/brocooly/resources/views/layouts/app.twig
@@ -10,7 +10,7 @@
 	<!-- Phones Link Detection -->
 	<meta name="format-detection" content="telephone=no">
 
-	<title>{% block title %} {{ __( 'Brocooly Framework', 'brocooly' ) }} | {{ site.name }} {% endblock %}</title>
+	<title>{% block title %} {{ __( 'Brocket Framework', 'brocooly' ) }} | {{ site.name }} {% endblock %}</title>
 
 	<link rel="stylesheet" href="{{ theme.link ~ '/style.css' }}">
 
