refactor: model service provider

--- a/web/app/themes/brocooly/resources/views/layouts/app.twig
+++ b/web/app/themes/brocooly/resources/views/layouts/app.twig
@@ -38,6 +38,8 @@
 
 	{% do action('wp_body_open') %}
 
+	<a href="#content" class="screen-reader-text">{{ __('Skip to the content', 'brocooly') }}</a>
+
 	{% block header %}
 	{% endblock %}
 
